--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
     .
   </h2>
 
-  <%= link_to "Đăng kí ngay!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Đăng kí ngay!", signup_path, class: "btn btn-lg btn-info" %>
 </div>
 <div class="center">
 <%= link_to image_tag("cohota.png", alt: "Rails logo"),
