--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
     font-weight: bold;
     }
 #logo:hover {
-    color: #fff;
+    color: #555;
     text-decoration: none;
 }
 body {
@@ -103,7 +103,17 @@ footer ul li {
     float: left;
     margin-left: 15px;
 }
-
+.user_center_left {
+    float: left;
+    width: 550px;
+}
+.user_center_right {
+    float: right;
+    width: 550px;
+}
+.user_center {
+    height: 450px;
+}
 /* forms */
 
 input, textarea, select, .uneditable-input {
@@ -137,3 +147,62 @@ input {
     font-weight: normal;
     color: #777;
 }
+table {
+    width: 100%;
+  }
+  
+th {
+    height: 50px;
+}
+/* Users index */
+
+.users {
+    list-style: none;
+    margin: 0;
+    li {
+      overflow: auto;
+      padding: 10px 0;
+      border-bottom: 1px solid $gray-lighter;
+    }
+    height: 500px;
+}
+.users li{
+    font-weight: bold;
+    font-size: larger;
+}
+/* sidebar */
+
+aside {
+    section.user_info {
+      margin-top: 20px;
+    }
+    section {
+      padding: 10px 0;
+      margin-top: 20px;
+      &:first-child {
+        border: 0;
+        padding-top: 0;
+      }
+      span {
+        display: block;
+        margin-bottom: 3px;
+        line-height: 1;
+      }
+      h1 {
+        font-size: 1.4em;
+        text-align: left;
+        letter-spacing: -1px;
+        margin-bottom: 3px;
+        margin-top: 0px;
+      }
+    }
+  }
+  
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+  }
+  
+  .gravatar_edit {
+    margin-top: 15px;
+  }
