--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       <%= link_to user.name, user %>
       <% if current_user.admin? && !current_user?(user) %>
             ~~~~> <%= link_to "Xóa", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
+                                  data: { confirm: "You sure?" }, class: "btn btn-danger" %>
       <% end %>
     </li>
   <% end %>
