--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,19 @@
 <% provide(:title, 'All users') %>
-<h1>Danh sách người dùng</h1>
+<h1 style="color: #0066cc;">Danh sách người dùng</h1>
 
 <ul class="users">
   <% @user.each do |user| %>
     <li>
       <%= gravatar_for user, size: 50 %>
-      <%= link_to user.name, user %>
-      <% if current_user.admin? && !current_user?(user) %>
+      <%if current_user.admin?%>
+        <%= link_to user.name, user %>
+        <% if !current_user?(user) %>
             ~~~~> <%= link_to "Xóa", user, method: :delete,
                                   data: { confirm: "You sure?" }, class: "btn btn-danger" %>
-      <% end %>
+        <% end %>
+      <%else%>
+        <p><%= user.name %></p>
+      <%end%>
     </li>
   <% end %>
 </ul>
