add export file

--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -24,3 +24,4 @@
 <br>
 <br>
 <%= link_to 'Back', current_user ,class: "btn btn-lg btn-info"%>
+<%= link_to 'Export', user_form1_index_url(format: :csv) ,class: "btn btn-lg btn-info"%>
