--- a/app/views/form2/show.html.erb
+++ b/app/views/form2/show.html.erb
@@ -27,3 +27,4 @@
 <br>
 <br>
 <%= link_to 'Back', current_user ,class: "btn btn-lg btn-info"%>
+<%= link_to 'Export', user_form2_index_url(format: :csv) ,class: "btn btn-lg btn-info"%>
