--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,69 +12,111 @@
   </aside>
 </div>
 <div class="user_center">
-<h3>
+  <h3>
     Nếu bạn làm việc theo 
     <a href="https://drive.google.com/file/d/1ucGjhLwVx-uzawQq8bTESnhm36o594Po/view">Loại hình tự do</a>
     (xem bản mẫu).
-</h3>
-<%= link_to "Nhập thông tin", new_user_form1_url(current_user), class: "btn btn-lg btn-info" %>
-<%= link_to "Xem thông tin", user_form1_url(current_user), class: "btn btn-lg btn-info" %>
-<h3>
+  </h3>
+  <%= link_to "Nhập thông tin", new_user_form1_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "Xem thông tin", user_form1_url(current_user), class: "btn btn-lg btn-info" %>
+  <h3>
     Nếu bạn làm việc theo 
     <a href="https://drive.google.com/file/d/1CoOf9gD-YRsq83h7UlNIyRyct5RFmAdM/view">Loại hình làm việc cho công ty</a>
     (xem bản mẫu).
-</h3>
-<%= link_to "Nhập thông tin", new_user_form2_url(current_user), class: "btn btn-lg btn-info" %>
-<%= link_to "Xem thông tin", user_form2_url(current_user), class: "btn btn-lg btn-info" %>
+  </h3>
+  <%= link_to "Nhập thông tin", new_user_form2_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "Xem thông tin", user_form2_url(current_user), class: "btn btn-lg btn-info" %>
 </div>
 <h2 style="color: blue; font-weight:bold;">Làm việc tự do</h2>
-      <table>
-        <tr>
-          <th>STT</th>
-          <th>Thời gian</th>
-          <th>Công việc</th>
-          <th>Ngày</th>
-          <th>Khách hàng</th>
-          <th>Số tiền</th>
-          <th>Nội dung</th>
-        </tr>
-        <%count=1%>
-        <% @user.form1s.each do |form1| %>
-        <tr>
-          <td><%= count%></td>
-          <td><%= form1.time_work %></td>
-          <td><%= form1.job %></td>
-          <td><%= form1.date %></td>
-          <td><%= form1.customer %></td>
-          <td><%= form1.income %></td>
-          <td><%= form1.work_des%></td>
-         </tr>
-          <%count+=1%>
-        <% end %>
-      </table>
-<h2 style="color: blue; font-weight:bold;">Làm việc cho công ty</h2>
-      <table>
-        <tr>
-          <th>STT</th>
-          <th>Tên công ty</th>
-          <th>Mã số thuế</th>
-          <th>Địa chỉ</th>
-          <th>Vị trí</th>
-          <th>Ngày</th>
-          <th>Nội dung</th>
-          <th>Lương</th>
-        </tr>
-        <%count=1%>
-        <% @user.form2s.each do |form2| %>
-        <tr>
-          <td><%= count%></td>
-          <td><%= form2.company_name %></td>
-          <td><%= form2.tax_code %></td>
-          <td><%= form2.position %></td>
-          <td><%= form2.date %></td>
-          <td><%= form2.work_des%></td>
-          <td><%= form2.income%></td>
-        </tr>
+<table id="table1" class="table table-striped table-bordered" style="width:100%">
+  <thead>
+    <tr>
+      <th>STT</th>
+      <th>Thời gian</th>
+      <th>Công việc</th>
+      <th>Ngày</th>
+      <th>Khách hàng</th>
+      <th>Số tiền</th>
+      <th>Nội dung</th>
+    </tr>
+  </thead>
+  <%count=1%>
+  <tbody>
+    <% @user.form1s.each do |form1| %>
+      <tr>
+        <td><%= count%></td>
+        <td><%= form1.time_work %></td>
+        <td><%= form1.job %></td>
+        <td><%= form1.date %></td>
+        <td><%= form1.customer %></td>
+        <td><%= form1.income %></td>
+        <td><%= form1.work_des%></td>
         <%count+=1%>
-        <% end %>
-      </table>
+      </tr>
+    <% end %>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>STT</th>
+      <th>Thời gian</th>
+      <th>Công việc</th>
+      <th>Ngày</th>
+      <th>Khách hàng</th>
+      <th>Số tiền</th>
+      <th>Nội dung</th>
+    </tr>
+  </tfoot>
+</table>
+<script language="javascript" type="text/javascript">
+  $(document).ready(function() {
+      $('#table1').DataTable();
+  } );
+</script>
+<h2 style="color: blue; font-weight:bold;">Làm việc cho công ty</h2>
+<table id="table2" class="table table-striped table-bordered" style="width:100%">
+  <thead>
+    <tr>
+      <th>STT</th>
+      <th>Tên công ty</th>
+      <th>Mã số thuế</th>
+      <th>Địa chỉ</th>
+      <th>Vị trí</th>
+      <th>Ngày</th>
+      <th>Lương</th>
+      <th>Nội dung</th>
+    </tr>
+  </thead>
+  <%count=1%>
+  <tbody>
+    <% @user.form2s.each do |form2| %>
+      <tr>
+        <td><%= count%></td>
+        <td><%= form2.company_name %></td>
+        <td><%= form2.tax_code %></td>
+        <td><%= form2.address %></td>
+        <td><%= form2.position %></td>
+        <td><%= form2.date %></td>
+        <td><%= form2.income%></td>
+        <td><%= form2.work_des%></td>
+        <%count+=1%>
+      </tr>
+    <% end %>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>STT</th>
+      <th>Tên công ty</th>
+      <th>Mã số thuế</th>
+      <th>Địa chỉ</th>
+      <th>Vị trí</th>
+      <th>Ngày</th>
+      <th>Lương</th>
+      <th>Nội dung</th>
+    </tr>
+  </tfoot>
+</table>
+<script language="javascript" type="text/javascript">
+  $(document).ready(function() {
+      $('#table2').DataTable();
+  } );
+</script>
