--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -5,31 +5,50 @@
   <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
 </center>
 <p class="text-justify">Tên/Name: <%= current_user.name%></p>
-<p class="text-justify">Thời gian/Time: <%= "2020-12-24 - "%></p>
+<p class="text-justify">Thời gian/Time: <%= "2020-12-24 - current"%></p>
 <p class="text-justify">Công Việc / Job: <%= "Online Selling"%></p>
-<table>
-  <tr>
-    <th>STT/No</th>
-    <th>Ngày/Date</th>
-    <th>Khách hàng/Customer</th>
-    <th>Số tiền/Income</th>
-    <th>Nội dung/Description</th>
-    <th>Xác nhận/Signature</th>
-  </tr>
-  <%count=1%>
-  <% @form1.each do |form1| %>
+<table id="table1" class="display" style="width:100%">
+  <thead>
     <tr>
-      <td><%= count%></td>
-      <td><%= form1.date %></td>
-      <td><%= form1.customer %></td>
-      <td><%= form1.income %></td>
-      <td><%= form1.work_des %></td>
-      <td><%= "" %></td>
-      <%count+=1%>
+      <th>STT/No</th>
+      <th>Ngày/Date</th>
+      <th>Khách hàng/Customer</th>
+      <th>Số tiền/Income</th>
+      <th>Nội dung/Description</th>
+      <th>Xác nhận/Signature</th>
     </tr>
-  <% end %>
+  </thead>
+  <%count=1%>
+  <tbody>
+    <% @form1.each do |form1| %>
+      <tr>
+        <td><%= count%></td>
+        <td><%= form1.date %></td>
+        <td><%= form1.customer %></td>
+        <td><%= form1.income %></td>
+        <td><%= form1.work_des %></td>
+        <td><%= "" %></td>
+        <%count+=1%>
+      </tr>
+    <% end %>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>STT/No</th>
+      <th>Ngày/Date</th>
+      <th>Khách hàng/Customer</th>
+      <th>Số tiền/Income</th>
+      <th>Nội dung/Description</th>
+      <th>Xác nhận/Signature</th>
+    </tr>
+  </tfoot>
 </table>
 <br>
 <br>
 <%= link_to 'Back', current_user ,class: "btn btn-lg btn-info"%>
 <%= link_to 'Export to Excel', user_form1_index_url(format: :csv) ,class: "btn btn-lg btn-info"%>
+<script type="text/javascript">
+  $(document).ready(function() {
+      $('#table1').DataTable();
+  } );
+</script>
