--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body>
     <header class="navbar navbar-light navbar-fixed-top" style="background-color: #9999ff;">
       <div class="container">
-        <%= link_to "Tiuh WEBSITE", root_url, id: "logo" %>
+        <%= link_to "SALES WEBSITE", root_url, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",   root_url %></li>
