--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,17 +1,11 @@
 <div class="center jumbotron">
   <h1>Chào mừng đến với website</h1>
-
   <h2>
-    Đây là trang chính của ứng dụng đơn giản cho học viên nhập các thông tin, áp dụng
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    .
+    Đây là trang chính của ứng dụng dành cho việc quản lý bán hàng online.
   </h2>
-
   <%= link_to "Đăng kí ngay!", signup_path, class: "btn btn-lg btn-info" %>
 </div>
 <div class="center">
-<%= link_to image_tag("cohota.png", alt: "Rails logo"),
-            'http://localhost:3000/' %>
+  <%= link_to image_tag("online.jpg", alt: "Rails logo", width: "1140", height: "700"),
+"https://www.lazada.vn/" %>
 </div>
-
-
