update UI home page

--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -5,7 +5,7 @@
   <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
 </center>
 <p class="text-justify">Tên/Name: <%= current_user.name%></p>
-<p class="text-justify">Thời gian/Time: <%= "2020-12-24 - current"%></p>
+<p class="text-justify">Thời gian/Time: <%= "2020-12-24 - 2022-01-30"%></p>
 <p class="text-justify">Công Việc / Job: <%= "Online Selling"%></p>
 <table id="table1" class="display" style="width:100%">
   <thead>
