--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -1,54 +1,70 @@
-<h1>BÁO CÁO THU NHẬP LÀM VIỆC TẠI</h1>
-<h1>DÀNH CHO NGƯỜI LÀM VIỆC TỰ DO</h1>
-<center>
-  <p class="text-uppercase">Income statement for working at home</p>
-  <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
-</center>
-<p class="text-justify">Tên/Name: <%= current_user.name%></p>
-<p class="text-justify">Thời gian/Time: <%= "2020-12-24 - 2022-01-30"%></p>
-<p class="text-justify">Công Việc / Job: <%= "Online Selling"%></p>
-<table id="table1" class="display" style="width:100%">
-  <thead>
-    <tr>
-      <th>STT/No</th>
-      <th>Ngày/Date</th>
-      <th>Khách hàng/Customer</th>
-      <th>Số tiền/Income</th>
-      <th>Nội dung/Description</th>
-      <th>Xác nhận/Signature</th>
-    </tr>
-  </thead>
-  <%count=1%>
-  <tbody>
-    <% @form1.each do |form1| %>
+<div id="report1">
+  <h1>BÁO CÁO THU NHẬP LÀM VIỆC TẠI</h1>
+  <h1>DÀNH CHO NGƯỜI LÀM VIỆC TỰ DO</h1>
+  <center>
+    <p class="text-uppercase">Income statement for working at home</p>
+    <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
+  </center>
+  <p class="text-justify">Tên/Name: <%= current_user.name%></p>
+  <p class="text-justify">Thời gian/Time: <%= "2020-12-24 - 2022-01-30"%></p>
+  <p class="text-justify">Công Việc / Job: <%= "Online Selling"%></p>
+  <table id="table1" class="table table-striped table-bordered" style="width:100%">
+    <thead>
       <tr>
-        <td><%= count%></td>
-        <td><%= form1.date %></td>
-        <td><%= form1.customer %></td>
-        <td><%= form1.income %></td>
-        <td><%= form1.work_des %></td>
-        <td><%= "" %></td>
-        <%count+=1%>
+        <th>STT/No</th>
+        <th>Ngày/Date</th>
+        <th>Khách hàng/Customer</th>
+        <th>Số tiền/Income</th>
+        <th>Nội dung/Description</th>
+        <th>Xác nhận/Signature</th>
       </tr>
-    <% end %>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th>STT/No</th>
-      <th>Ngày/Date</th>
-      <th>Khách hàng/Customer</th>
-      <th>Số tiền/Income</th>
-      <th>Nội dung/Description</th>
-      <th>Xác nhận/Signature</th>
-    </tr>
-  </tfoot>
-</table>
+    </thead>
+    <%count=1%>
+    <tbody>
+      <% @form1.each do |form1| %>
+        <tr>
+          <td><%= count%></td>
+          <td><%= form1.date %></td>
+          <td><%= form1.customer %></td>
+          <td><%= form1.income %></td>
+          <td><%= form1.work_des %></td>
+          <td><%= "" %></td>
+          <%count+=1%>
+        </tr>
+      <% end %>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th>STT/No</th>
+        <th>Ngày/Date</th>
+        <th>Khách hàng/Customer</th>
+        <th>Số tiền/Income</th>
+        <th>Nội dung/Description</th>
+        <th>Xác nhận/Signature</th>
+      </tr>
+    </tfoot>
+  </table>
+</div>
 <br>
 <br>
 <%= link_to 'Back', current_user ,class: "btn btn-lg btn-info"%>
 <%= link_to 'Export to Excel', user_form1_index_url(format: :csv) ,class: "btn btn-lg btn-info"%>
-<script type="text/javascript">
+<button type="button" class="btn btn-lg btn-info btn-lg" id="downloadPDF">Export to PDF</button>
+<%# <script type="text/javascript">
   $(document).ready(function() {
       $('#table1').DataTable();
   } );
+</script> %>
+<script type="text/javascript">
+  $('#downloadPDF').click(function () {
+      domtoimage.toPng(document.getElementById('report1'))
+          .then(function (blob) {
+              var pdf = new jsPDF('l', 'pt', [$('#report1').width(), $('#report1').height()]);
+  
+              pdf.addImage(blob, 'PNG', 0, 0, $('#report1').width(), $('#report1').height());
+              pdf.save("report for freelncer.pdf");
+  
+              that.options.api.optionsChanged();
+          });
+  });
 </script>
