complete email activation

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #8080ff;">Online Sales Management Website</a>
-    by <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #8080ff;">Cohota</a>
+    <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #008080;">Online Sales Management Website</a>
+    by <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #008080;">Cohota</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   '#' %></li>
       <li><%= link_to "Contact", '#' %></li>
-      <li><a href="https://shopee.vn/" style="color: #8080ff;">News</a></li>
+      <li><a href="https://shopee.vn/" style="color: #008080;">News</a></li>
     </ul>
   </nav>
 </footer>
