--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,8 @@
 
  #logo {
     float: left;
-    margin-right: 10px;
-    font-size: 1.7em;
+    margin-right: 750px;
+    font-size: 1.5em;
     color: #fff;
     text-transform: uppercase;
     letter-spacing: -1px;
@@ -31,6 +31,9 @@
 #logo:hover {
     color: #555;
     text-decoration: none;
+}
+.navbar-toggler {
+  margin-left: 400px;
 }
 body {
     padding-top: 60px;
@@ -56,19 +59,22 @@ h1, h2, h3, h4, h5, h6 {
   }
   
 h1 {
+    font-family: cursive;
     font-size: 3em;
     letter-spacing: -2px;
     margin-bottom: 30px;
     text-align: center;
+    font-family: Arial, sans-serif;
 }
-  
 h2 {
+    font-family: cursive;
     font-size: 1.2em;
     letter-spacing: -1px;
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
-    color: #777;
+    color:white;
+    font-family: Arial, sans-serif;
 }
   
 p {
