--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -1,14 +1,14 @@
 <div id="docx">
   <div id="report1" class="WordSection1">
-    <h1>BÁO CÁO THU NHẬP LÀM VIỆC TẠI</h1>
-    <h1>DÀNH CHO NGƯỜI LÀM VIỆC TỰ DO</h1>
     <center>
+      <h1>BÁO CÁO THU NHẬP LÀM VIỆC TẠI</h1>
+      <h1>DÀNH CHO NGƯỜI LÀM VIỆC TỰ DO</h1>
       <p class="text-uppercase">Income statement for working at home</p>
       <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
     </center>
     <p class="text-justify">Tên/Name: <%= current_user.name%></p>
-    <p class="text-justify">Thời gian/Time: <%= "2020-12-24 - 2022-01-30"%></p>
-    <p class="text-justify">Công Việc / Job: <%= "Online Selling"%></p>
+    <p class="text-justify">Thời gian/Time: <%= current_user.form1s.last.time_work%></p>
+    <p class="text-justify">Công Việc / Job: <%= current_user.form1s.last.job%></p>
     <table id="table1" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
