--- a/app/views/form2/show.html.erb
+++ b/app/views/form2/show.html.erb
@@ -1,17 +1,17 @@
 <div id="docx">
   <div id="report2" class="WordSection1">
-    <h1>BẢNG LƯƠNG LÀM VIỆC TẠI NHÀ</h1>
-    <h1>DÀNH CHO NHÂN VIÊN LÀM VIỆC</h1>
-    <h1>THEO HỢP ĐỒNG CÔNG TY</h1>
     <center>
+      <h1>BẢNG LƯƠNG LÀM VIỆC TẠI NHÀ</h1>
+      <h1>DÀNH CHO NHÂN VIÊN LÀM VIỆC</h1>
+      <h1>THEO HỢP ĐỒNG CÔNG TY</h1>
       <p class="text-uppercase">Income statement for working at home</p>
       <p class="text-uppercase">(Type : Registered worker at a company)</p>
     </center>
-    <p class="text-justify">Tên công ty/Company Name: <%= "Cohota"%></p>
-    <p class="text-justify">Mã số thuế/Tax Code: <%= "35271819AFBM"%></p>
-    <p class="text-justify">Địa chỉ/Address: <%= "Khu CNPM - ĐHQG, TH.HCM"%></p>
+    <p class="text-justify">Tên công ty/Company Name: <%= current_user.form2s.last.company_name%></p>
+    <p class="text-justify">Mã số thuế/Tax Code: <%= current_user.form2s.last.tax_code%></p>
+    <p class="text-justify">Địa chỉ/Address: <%= current_user.form2s.last.address%></p>
     <p class="text-justify">Họ và Tên nhân viên/Full Name: <%= current_user.name%></p>
-    <p class="text-justify">Vị trí/Position: <%= "Tester"%></p>
+    <p class="text-justify">Vị trí/Position: <%= current_user.form2s.last.position%></p>
     <table id="table2" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
@@ -72,7 +72,7 @@
               that.options.api.optionsChanged();
           });
   });
-
+  
   function export2Word( element ) {
   
      var html, link, blob, url, css;
