--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,9 @@
             <li><%= link_to "Home",   root_url %></li>
             <li><%= link_to "Help",   '#' %></li>
             <% if logged_in? %>
-              <li><%= link_to "Users", current_user%></li>
-              <li><%= link_to "View", users_path%></li>
+              <li><%= link_to "Users", users_path%></li>
+              <li><%= link_to "View", current_user%></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
               </li>
