--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'All users') %>
 <h1 style="color: #0066cc;">Danh sách người dùng</h1>
-
 <ul class="users">
   <% @user.each do |user| %>
     <li>
@@ -8,12 +7,15 @@
       <%if current_user.admin?%>
         <%= link_to user.name, user %>
         <% if !current_user?(user) %>
-            ~~~~> <%= link_to "Xóa", user, method: :delete,
-                                  data: { confirm: "You sure?" }, class: "btn btn-danger" %>
+          <%= link_to "Xóa", user, method: :delete,
+                                  data: { confirm: "You sure?" }%>
         <% end %>
       <%else%>
-        <p><%= user.name %></p>
+        <%= user.name %>
       <%end%>
+      <br>
+      <%= user.email %><br/>
+      <%= user.admin == true ? "Admin" : "Member"%><br/>
     </li>
   <% end %>
 </ul>
