--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,14 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
-    
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
-    
     <%# <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"
     integrity="sha256-c9vxcXyAG4paArQG3xk6DjyW/9aHxai2ef9RpMWO44A=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
-    
-     <%= favicon_link_tag asset_path('logo.png') %>
+    <%= favicon_link_tag asset_path('logo.png') %>
   </head>
   <body>
     <header class="navbar navbar-default navbar-expand-lg navbar-dark bg-black navbar-fixed-top" style="background-color: #008080;">
@@ -35,18 +32,19 @@
         </button>
         <nav>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="nav navbar-nav navbar-right ">
-            <li><%= link_to "Home",   root_url,{:style=>'color:white;font-family:cursive;', :class => "css_class"} %></li>
-            <% if logged_in? %>
-              <li><%= link_to "Users", current_user,{:style=>'color:white; font-family:cursive;', :class => "css_class"}%></li>
-              <li><%= link_to "View", users_path,{:style=>'color:white;font-family:cursive;', :class => "css_class"}%></li>
-              <li>
-                <%= link_to "Log out", logout_path,{:style=>'color:white;font-family:cursive;', :class => "css_class", method: "delete"}%>
-              </li>
-            <% else %>
-              <li><%= link_to "Log in", login_path,{:style=>'color:white;font-family:cursive;', :class => "css_class"} %></li>
-            <% end %>
-          </ul>
+            <ul class="nav navbar-nav navbar-right ">
+              <li><%= link_to "Home",   root_url,{:style=>'color:white;font-family:cursive;', :class => "css_class"} %></li>
+              <% if logged_in? %>
+                <li><%= link_to "Users", users_path,{:style=>'color:white; font-family:cursive;', :class => "css_class"}%></li>
+                <li><%= link_to "View", current_user,{:style=>'color:white;font-family:cursive;', :class => "css_class"}%></li>
+                <li><%= link_to "Settings", edit_user_path(current_user),{:style=>'color:white;font-family:cursive;', :class => "css_class"} %></li>
+                <li>
+                  <%= link_to "Log out", logout_path,{:style=>'color:white;font-family:cursive;', :class => "css_class", method: "delete"}%>
+                </li>
+              <% else %>
+                <li><%= link_to "Log in", login_path,{:style=>'color:white;font-family:cursive;', :class => "css_class"} %></li>
+              <% end %>
+            </ul>
           </div>
         </nav>
       </div>
