--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #008080;">Online Sales Management Website</a>
-    by <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #008080;">Cohota</a>
+    <a href="https://onlinesaleswebsite.herokuapp.com/" style="color: #008080;">Online Sales Management Website</a>
+    by <a href="https://onlinesaleswebsite.herokuapp.com/" style="color: #008080;">Cohota</a>
   </small>
   <nav>
     <ul>
