--- a/app/views/form1/new.html.erb
+++ b/app/views/form1/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<h1>Điền thông tin</h1>
+<h1>Input information</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
