--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<h1>Đăng kí</h1>
+<h1>Sign up</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -15,10 +15,10 @@
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "Password Comfirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Tạo tài khoản", class: "btn btn-info" %>
+      <%= f.submit "Create Account", class: "btn btn-info" %>
     <% end %>
   </div>
 </div>
