--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,31 +15,31 @@
 </div>
 <div class="user_center">
   <h3>
-    Nếu bạn làm việc theo 
-    <a href="https://drive.google.com/file/d/1ucGjhLwVx-uzawQq8bTESnhm36o594Po/view">Loại hình tự do</a>
-    (xem bản mẫu).
+    If you work as  
+    <a href="https://drive.google.com/file/d/1ucGjhLwVx-uzawQq8bTESnhm36o594Po/view">Freelancer</a>
+    (click to Sample form).
   </h3>
-  <%= link_to "Nhập thông tin", new_user_form1_url(current_user), class: "btn btn-lg btn-info" %>
-  <%= link_to "Xem thông tin", user_form1_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "Submit information", new_user_form1_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "View information", user_form1_url(current_user), class: "btn btn-lg btn-info" %>
   <h3>
-    Nếu bạn làm việc theo 
-    <a href="https://drive.google.com/file/d/1CoOf9gD-YRsq83h7UlNIyRyct5RFmAdM/view">Loại hình làm việc cho công ty</a>
-    (xem bản mẫu).
+    If you work as 
+    <a href="https://drive.google.com/file/d/1CoOf9gD-YRsq83h7UlNIyRyct5RFmAdM/view">Employee for Company</a>
+    (click to Sample form).
   </h3>
-  <%= link_to "Nhập thông tin", new_user_form2_url(current_user), class: "btn btn-lg btn-info" %>
-  <%= link_to "Xem thông tin", user_form2_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "Submit information", new_user_form2_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "View information", user_form2_url(current_user), class: "btn btn-lg btn-info" %>
 </div>
-<h2 style="color: blue; font-weight:bold;">Làm việc tự do</h2>
+<h2 style="color: blue; font-weight:bold;">Freelancer</h2>
 <table id="table1" class="table table-striped table-bordered" style="width:100%">
   <thead>
     <tr>
       <th>STT</th>
-      <th>Thời gian</th>
-      <th>Công việc</th>
-      <th>Ngày</th>
-      <th>Khách hàng</th>
-      <th>Số tiền</th>
-      <th>Nội dung</th>
+      <th>Time</th>
+      <th>Job</th>
+      <th>Date</th>
+      <th>Customer</th>
+      <th>Income</th>
+      <th>Work description</th>
     </tr>
   </thead>
   <%count=1%>
@@ -102,18 +102,18 @@
       });
   } );
 </script>
-<h2 style="color: blue; font-weight:bold;">Làm việc cho công ty</h2>
+<h2 style="color: blue; font-weight:bold;">Work for Company</h2>
 <table id="table2" class="table table-striped table-bordered" style="width:100%">
   <thead>
     <tr>
       <th>STT</th>
-      <th>Tên công ty</th>
-      <th>Mã số thuế</th>
-      <th>Địa chỉ</th>
-      <th>Vị trí</th>
-      <th>Ngày</th>
-      <th>Lương</th>
-      <th>Nội dung</th>
+      <th>Company Name</th>
+      <th>Tax code</th>
+      <th>Address</th>
+      <th>Position</th>
+      <th>Date</th>
+      <th>Income</th>
+      <th>Work description</th>
     </tr>
   </thead>
   <%count=1%>
