--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,38 +1,14 @@
 <div class="center jumbotron">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100"> <%= link_to image_tag("online7.jpg", alt: "Rails logo", width: "1140", height: "700"),
-"https://www.lazada.vn/" %> 
-         <div class="carousel-caption d-none d-md-block">
-          <h1>Chào mừng đến với website</h1>
-          <h2>
-          Nếu bạn chưa có tài khoản ?
-          </h2>
-          <%= link_to "Đăng kí ngay!", signup_path, class: "btn btn-lg btn-info" %>
-         </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100"> <%= link_to image_tag("online5.jpg", alt: "Rails logo", width: "1140", height: "700"),
-"https://www.lazada.vn/" %>
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Nếu bạn đã có tài khoản!</h1>
-          <%= link_to "Đăng nhập ngay!", signup_path, class: "btn btn-lg btn-info" %>
-         </div>
-      </div>
+  <h1>Welcome to our website!</h1>
 
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+  <h2>
+    This is homepage of online sales management website
+    .
+  </h2>
+
+  <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-info" %>
+</div>
+<div class="center">
+<%= link_to image_tag("online.jpg",class: "img-responsive", alt: "Rails logo", width: "1120", height: "550"),
+"https://www.nytimes.com/section/education" %>
 </div>
