--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Sales Management Website</title>
     <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
@@ -11,10 +12,14 @@
     crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
-    
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+    <![endif]-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
@@ -24,27 +29,28 @@
     integrity="sha256-c9vxcXyAG4paArQG3xk6DjyW/9aHxai2ef9RpMWO44A=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
     
-     <%= favicon_link_tag asset_path('logo.png') %>
+    <%= favicon_link_tag asset_path('logo.png') %>
   </head>
+
   <body>
-    <header class="navbar navbar-default navbar-expand-lg navbar-dark bg-black navbar-fixed-top" style="background-color: #008080;">
-      <div class="container">
-        <%= link_to "WEBSITE", root_url,{:style=>'font-family: cursive;', :class => "css_class",id: "logo" } %>
+    <header class="navbar navbar-default navbar-expand-lg navbar-light navbar-fixed-top" style="background-color: #9999ff;">
+      <div class="container" style="@media screen and (max-width: 800px){margin-left: -50px;}@media screen and (max-width: 800px){margin-left: 200px;}">
+        <%= link_to "WEBSITE", root_url, id: "logo" %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
         </button>
-        <nav>
+        <nav style="width: 700px; margin-left: 100px; @media screen and (max-width: 800px){margin-left: 500px;}">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="nav navbar-nav navbar-right ">
-            <li><%= link_to "Home",   root_url,{:style=>'color:white;font-family:cursive;', :class => "css_class"} %></li>
+          <ul class="nav navbar-nav navbar-right mr-auto">
+            <li><%= link_to "Home",   root_url,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"} %></li>
             <% if logged_in? %>
-              <li><%= link_to "Users", users_path,{:style=>'color:white; font-family:cursive;', :class => "css_class"}%></li>
-              <li><%= link_to "View", current_user,{:style=>'color:white;font-family:cursive;', :class => "css_class"}%></li>
+              <li><%= link_to "Users", current_user,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"}%></li>
+              <li><%= link_to "View", users_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
               <li>
-                <%= link_to "Log out", logout_path,{:style=>'color:white;font-family:cursive;', :class => "css_class", method: "delete"}%>
+                <%= link_to "Log out", logout_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class",method: "delete"}  %>
               </li>
             <% else %>
-              <li><%= link_to "Log in", login_path,{:style=>'color:white;font-family:cursive;', :class => "css_class"} %></li>
+              <li><%= link_to "Log in", login_path ,{:style=>'color:white; font-family:cursive;', :class => "css_class"}%></li>
             <% end %>
           </ul>
           </div>
