--- a/app/views/form1/new.html.erb
+++ b/app/views/form1/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<h1>Input information</h1>
+<h1 style="font-family: cursive;">Input information</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -25,7 +25,7 @@
       <%= f.label "Work description" %>
       <%= f.text_field :work_des %>
 
-      <%= f.submit "Submit", class: "btn btn-primary" %>
+      <%= f.submit "Submit",{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
     <% end %>
   </div>
 </div>
