--- a/app/views/form2/new.html.erb
+++ b/app/views/form2/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Form') %>
-<h1>Input informations</h1>
+<h1 style="font-family: cursive;">Input informations</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -28,7 +28,7 @@
       <%= f.label :income %>
       <%= f.number_field :income %>
 
-      <%= f.submit "Submit", class: "btn btn-primary" %>
+      <%= f.submit "Submit", {:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
     <% end %>
   </div>
 </div>
