--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #9999ff;">Online Sales Management Website</a>
-    by <a href="https://onlinesalesmanagementweb.herokuapp.com/" style="color: #9999ff;">Cohota</a>
+    <a href="https://onlinesalesweb.herokuapp.com/" style="color: #9999ff; font-family: cursive;">Income Management Website</a>
+    by <a href="https://cohota.com/" style="color: #9999ff; font-weight: bold;">Cohota</a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-      <li><a href="https://shopee.vn/" style="color: #9999ff;">News</a></li>
+      <li style="font-family: cursive;"><%= link_to "About",   '#' %></li>
+      <li style="font-family: cursive;"><%= link_to "Contact", '#' %></li>
+      <li><a href="https://shopee.vn/" style="color: #9999ff; font-weight: bold;">News</a></li>
     </ul>
   </nav>
 </footer>
