--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1 style="font-family: cursive;">Sign up</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -18,7 +18,7 @@
       <%= f.label :password_confirmation, "Password Comfirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Create Account", class: "btn btn-info" %>
+      <%= f.submit "Create Account", {:style=>'font-family:cursive', :class => "css_class",class: "btn btn-warning"} %>
     <% end %>
   </div>
 </div>
