--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,19 +16,22 @@
 <div class="user_center">
   <h3>
     If you work as  
-    <a href="https://drive.google.com/file/d/1ucGjhLwVx-uzawQq8bTESnhm36o594Po/view">Freelancer</a>
+    <a style="font-style: italic;" href="https://drive.google.com/file/d/1ucGjhLwVx-uzawQq8bTESnhm36o594Po/view">Freelancer</a>
     (click to Sample form).
   </h3>
-  <%= link_to "Submit information", new_user_form1_url(current_user), class: "btn btn-lg btn-info" %>
-  <%= link_to "View information", user_form1_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "Submit information", new_user_form1_url(current_user),{:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}   %>
+  <%= link_to "View information", user_form1_url(current_user), {:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}%>
   <h3>
     If you work as 
-    <a href="https://drive.google.com/file/d/1CoOf9gD-YRsq83h7UlNIyRyct5RFmAdM/view">Employee for Company</a>
+    <a style="font-style: italic;" href="https://drive.google.com/file/d/1CoOf9gD-YRsq83h7UlNIyRyct5RFmAdM/view">Employee for Company</a>
     (click to Sample form).
   </h3>
-  <%= link_to "Submit information", new_user_form2_url(current_user), class: "btn btn-lg btn-info" %>
-  <%= link_to "View information", user_form2_url(current_user), class: "btn btn-lg btn-info" %>
+  <%= link_to "Submit information", new_user_form2_url(current_user),{:style=>'color:white; font-family:cursive; ', :class => "css_class",class: "btn btn-lg btn-primary"}   %>
+  <%= link_to "View information", user_form2_url(current_user),{:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}  %>
 </div>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+<div class="carousel-item active">
 <h2 style="color: blue; font-weight:bold;">Freelancer</h2>
 <table id="table1" class="table table-striped table-bordered" style="width:100%">
   <thead>
@@ -102,6 +105,8 @@
       });
   } );
 </script>
+</div>
+<div class="carousel-item">
 <h2 style="color: blue; font-weight:bold;">Work for Company</h2>
 <table id="table2" class="table table-striped table-bordered" style="width:100%">
   <thead>
@@ -177,3 +182,14 @@
       });
   } );
 </script>
+</div>
+<a class="carousel-control-prev" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span style="filter: invert(100%);" class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="next">
+    <span style="filter: invert(100%);" class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+</a>
+</div>
+</div>
