--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,10 +1,10 @@
-<h1>Sample App</h1>
+<h1>Website quản lý thu nhập tài chính</h1>
 
-<p>Hi <%= @user.name %>,</p>
+<p>Chào <%= @user.name %>,</p>
 
 <p>
-Welcome to the Sample App! Click on the link below to activate your account:
+Chào mừng bạn đến với Website quản lý thu nhập tài chính! Hãy chọn vào đường dẫn bên dưới để xác thực tài khỏan của bạn:
 </p>
 
-<%= link_to "Activate", edit_account_activation_url(@user.activation_token,
+<%= link_to "Kích Hoạt", edit_account_activation_url(@user.activation_token,
                                                     email: @user.email) %>
