--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,7 +86,7 @@ h1 {
     font-family: Arial, sans-serif;
 }
 h2 {
-    font-family: cursive;
+    font-family: sans-serif;
     font-size: 1.2em;
     letter-spacing: -1px;
     margin-bottom: 30px;
