--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -7,8 +7,13 @@
       <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
     </center>
     <p class="text-justify">Tên/Name: <%= current_user.name%></p>
-    <p class="text-justify">Thời gian/Time: <%= current_user.form1s.last.time_work%></p>
-    <p class="text-justify">Công Việc / Job: <%= current_user.form1s.last.job%></p>
+    <% if current_user.form1s.any? %>
+      <p class="text-justify">Thời gian/Time: <%= current_user.form1s.last.time_work%></p>
+      <p class="text-justify">Công Việc/Job: <%= current_user.form1s.last.job%></p>
+    <%else%>
+      <p class="text-justify">Thời gian/Time: <%= "Blank"%></p>
+      <p class="text-justify">Công Việc/Job: <%= "Blank"%></p>
+    <%end%>
     <table id="table1" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
@@ -30,26 +35,20 @@
             <td><%= form1.income %></td>
             <td><%= form1.work_des %></td>
             <td><%= "" %></td>
+            <td><%= link_to "Chỉnh sửa", "/users/#{current_user.id}/form1/#{form1.id}/edit" %></td>
+            <td> <%= link_to 'Xóa', "/users/#{current_user.id}/form1/#{form1.id}/",
+               method: :delete,
+               data: { confirm: 'Are you sure?' } %></td>
             <%count+=1%>
           </tr>
         <% end %>
       </tbody>
-      <%# <tfoot>
-        <tr>
-          <th>STT/No</th>
-          <th>Ngày/Date</th>
-          <th>Khách hàng/Customer</th>
-          <th>Số tiền/Income</th>
-          <th>Nội dung/Description</th>
-          <th>Xác nhận/Signature</th>
-        </tr>
-      </tfoot> %>
     </table>
   </div>
 </div>
 <br>
 <br>
-<%= link_to 'Back', current_user ,{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-lg btn-primary"}%>
+<%= link_to 'Trở về', current_user ,{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-lg btn-primary"}%>
 <button style="font-family: cursive;" type="button" class="btn btn-lg btn-primary btn-lg" onclick="export2Word(window.docx)">Export to Word</button>
 <%= link_to 'Export to Excel', user_form1_index_url(format: :csv) ,{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-lg btn-primary"}%>
 <button style="font-family: cursive;" type="button" class="btn btn-lg btn-primary btn-lg" id="downloadPDF">Export to PDF</button>
