--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Income Management Website</title>
+    <title>Website quản lý thu nhập tài chính</title>
     <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
     integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA"
@@ -12,50 +12,48 @@
     crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
     <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
     <![endif]-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
-    
     <%# <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"
     integrity="sha256-c9vxcXyAG4paArQG3xk6DjyW/9aHxai2ef9RpMWO44A=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
-
     <%= favicon_link_tag asset_path('logo.png') %>
   </head>
-
   <body>
     <header class="navbar navbar-default navbar-expand-lg navbar-light navbar-fixed-top" style="background-color: #9999ff;">
       <div class="container">
         <a style="float: left;" href="#" class="navbar-brand">
           <%= link_to image_tag("logo.png",class: "img-responsive", alt: "Rails logo", width: "30", height: "30") %>
         </a>
-        <%= link_to "WEBSITE", root_url, id: "logo" %>
+        <%= link_to "QUẢN LÝ TÀI CHÍNH", root_url, id: "logo" %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <nav style="width: 700px; margin-left: 100px; @media screen and (max-width: 800px){margin-left: 500px;}">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="nav navbar-nav navbar-right mr-auto">
-            <li><%= link_to "Home",   root_url,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"} %></li>
-            <% if logged_in? %>
-              <li><%= link_to "User", current_user,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"}%></li>
-              <li><%= link_to "View", users_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
-              <li>
-                <%= link_to "Log out", logout_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class",method: "delete"}  %>
-              </li>
-            <% else %>
-              <li><%= link_to "Log in", login_path ,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
-            <% end %>
-          </ul>
+            <ul class="nav navbar-nav navbar-right mr-auto">
+              <li><%= link_to "Trang chủ",   root_url,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"} %></li>
+              <% if logged_in? %>
+                <li><%= link_to "Hồ sơ", current_user,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"}%></li>
+                <li><%= link_to "Chỉnh sửa", edit_user_path(current_user), {:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"} %></li>
+                <%if current_user.admin?%>
+                  <li><%= link_to "Người dùng", users_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
+                <%end%>
+                <li>
+                  <%= link_to "Đăng xuất", logout_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class",method: "delete"}  %>
+                </li>
+              <% else %>
+                <li><%= link_to "Đăng nhập", login_path ,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
+              <% end %>
+            </ul>
           </div>
         </nav>
       </div>
