--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Reset password') %>
-<h1>Reset password</h1>
+<h1>Đổi mật khẩu</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -8,13 +8,13 @@
 
       <%= hidden_field_tag :email, @user.email %>
 
-      <%= f.label :password %>
+      <%= f.label :password, "Mật khẩu"%>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "Xác nhận mật khẩu" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Update password", class: "btn btn-primary" %>
+      <%= f.submit "Cập nhật mật khẩu", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
