--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,5 @@
-Hi <%= @user.name %>,
+Chào <%= @user.name %>,
 
-Welcome to the Sample App! Click on the link below to activate your account:
+Chào mừng bạn đến với Website quản lý thu nhập tài chính! Hãy chọn vào đường dẫn bên dưới để xác thực tài khỏan của bạn:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
