--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,13 +1,13 @@
-<h1>Password reset</h1>
+<h1>Đổi mật khẩu</h1>
 
-<p>To reset your password click the link below:</p>
+<p>Để đổi mật khẩu của bạn, hãy chọn vào đường dẫn bên dưới:</p>
 
-<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
+<%= link_to "Đổi mật khẩu", edit_password_reset_url(@user.reset_token,
                                                       email: @user.email) %>
 
-<p>This link will expire in two hours.</p>
+<p>Đường dẫn này sẽ hết hạn trong vòng 2 giờ.</p>
 
 <p>
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+Nếu bạn không yêu cầu đặt lại mật khẩu của mình, vui lòng bỏ qua email này và
+mật khẩu của bạn sẽ vẫn như cũ.
 </p>
