--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,8 +1,8 @@
-To reset your password click the link below:
+Để đổi mật khẩu của bạn, hãy chọn vào đường dẫn bên dưới:
 
 <%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
-This link will expire in two hours.
+Đường dẫn này sẽ hết hạn trong vòng 2 giờ.
 
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+Nếu bạn không yêu cầu đặt lại mật khẩu của mình, vui lòng bỏ qua email này và
+mật khẩu của bạn sẽ vẫn như cũ.
