--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,24 @@
 <% provide(:title, 'Sign up') %>
-<h1 style="font-family: cursive;">Sign up</h1>
+<h1 style="font-family: cursive;">Đăng ký</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
 
-      <%= f.label :name %>
+      <%= f.label :name, "Tên"%>
       <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :email %>
+      <%= f.label :Email %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :password %>
+      <%= f.label :password, "Mật khẩu"%>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Password Comfirmation" %>
+      <%= f.label :password_confirmation, "Xác nhận mật khẩu" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Create Account", {:style=>'font-family:cursive', :class => "css_class",class: "btn btn-warning"} %>
+      <%= f.submit "Tạo tài khoản", {:style=>'font-family:cursive', :class => "css_class",class: "btn btn-warning"} %>
     <% end %>
   </div>
 </div>
